--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-f9829320-7fd3-4b6b-bdcb-4286ca92bb43;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=localhost;userid=developer;password=P0rthu$1;Database=SalesWebMvcContextappdb"
   }
 }
